--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 redbpf = { version = "2.3.0", features = ["load"] }
-tokio = { version = "1.17.0", features = ["rt", "signal", "time", "io-util", "net", "sync"] }
+tokio = { version = "1.17.0", features = ["full"] }
 tracing-subscriber = "0.3.9"
 tracing = "0.1.31"
 futures = "*"
